// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processWeek 골든 스냅샷 > 시상식 주간(50주차)의 출력이 스냅샷과 일치한다 1`] = `
{
  "newState": {
    "album": {
      "conceptHistory": [],
      "currentAlbum": null,
      "releasedAlbums": [],
    },
    "calendar": {
      "currentSeason": "winter",
      "kpopNews": [
        {
          "detail": "연말 무대 완성도와 업계 평판이 직접적인 변수로 작동한다.",
          "headline": "MMA/MAMA/골든디스크 시상식 일정 확정",
          "id": "news-w50-0",
          "type": "event",
          "week": 50,
        },
      ],
      "marketTrend": {
        "coldGenre": "trot",
        "coldMood": "retro",
        "hotGenre": "dancePop",
        "hotMood": "refreshing",
      },
      "seasonConceptBonus": {
        "cute": 50,
        "dark": 50,
        "dreamy": 50,
        "girlCrush": 50,
        "powerful": 50,
        "refreshing": 50,
        "retro": 50,
        "sexy": 50,
        "sophisticated": 50,
        "y2k": 50,
      },
      "upcomingCompetitorComebacks": [],
    },
    "competitor": {
      "backgroundGroups": [],
      "eventRivals": [
        {
          "activeWeeks": 0,
          "agency": "빅오션 뮤직",
          "debutYear": 1,
          "duration": 2,
          "fandom": 5382,
          "gender": "female",
          "global": 2202,
          "id": "event-rival-mega_rookie-w50",
          "industry": 56,
          "intensity": 81,
          "name": "에클라",
          "public": 65,
          "stats": {
            "dance": 77,
            "marketing": 75,
            "visual": 74,
            "vocal": 75,
          },
          "strengths": [
            "완성형 데뷔",
            "대형 마케팅",
            "초기 화제성",
          ],
          "triggerType": "mega_rookie",
          "type": "traditional",
          "weaknesses": [
            "초기 버블 이후 피로도",
          ],
        },
      ],
      "permanentRivals": [],
    },
    "event": {
      "activeInterludeActivities": [],
      "pendingEvents": [],
    },
    "fandom": {
      "chartPositions": {
        "albumSales": 0,
        "melon": 0,
        "spotify": 0,
        "youtube": 0,
      },
      "fandom": 5,
      "fandomDisappointment": 0,
      "fandomLoyalty": 50,
      "global": 1,
      "industry": 20,
      "public": 8,
      "weeklyRevenue": {
        "ads": 0,
        "album": 0,
        "concert": 0,
        "goods": 0,
        "other": 0,
        "streaming": 0,
      },
    },
    "finance": {
      "expenseHistory": [
        {
          "breakdown": {
            "fixedCosts": 946154,
          },
          "week": 50,
        },
      ],
      "fixedCosts": {
        "dormitory": 1000000,
        "equipment": 300000,
        "healthcare": 0,
        "livingExpense": 500000,
        "security": 0,
        "staffSalary": 800000,
        "studio": 1500000,
      },
      "incomeHistory": [
        {
          "breakdown": {},
          "week": 50,
        },
      ],
      "money": 999053846,
      "upgrades": {
        "dormLevel": 1,
        "equipmentLevel": 1,
        "hasHealthcare": false,
        "hasSecurity": false,
        "livingExpenseLevel": 1,
        "studioLevel": 1,
      },
      "weeklyFixedTotal": 946154,
    },
    "game": {
      "activeProjects": [],
      "adContractsSigned": 0,
      "awardHistory": [],
      "campaignFailure": null,
      "campaignSeed": 0,
      "companyName": "픽스처 엔터테인먼트",
      "currentPhase": "training",
      "currentSeason": "winter",
      "currentWeek": 51,
      "currentYear": 1,
      "emergencyFinancing": [],
      "fiveYearReview": null,
      "groupGender": "female",
      "groupName": "FIXTURE",
      "insolvencyWeeks": 0,
      "investorComplianceCount": 0,
      "investorConditionProgress": {
        "summit-quarterly": {
          "firstFailedWeek": 50,
          "penaltyApplied": false,
        },
      },
      "investorConditions": [
        {
          "deadlineWeeks": 36,
          "description": "첫 투자 검토에서 최근 분기 영업 현금흐름 흑자 달성",
          "id": "summit-quarterly",
          "metric": "quarterlyRevenue",
          "penalty": "경영 간섭이 시작되고 활동 우선순위가 왜곡된다.",
          "target": 0,
        },
        {
          "deadlineWeeks": 104,
          "description": "2년 안에 초기 투자금 회수 수준의 누적 성과 달성",
          "id": "summit-payback",
          "metric": "payback",
          "penalty": "지분 압박과 투자 회수 통보가 시작된다.",
          "target": 1500000000,
        },
      ],
      "investorPenaltyActive": true,
      "investorPressureWeeks": 0,
      "investorType": "vc",
      "lastInvestorDemandWeek": 51,
      "lastOpportunityWeek": null,
      "lastStrategicExpansionWeek": null,
      "milestonesAchieved": [],
      "notifications": [
        {
          "id": "noti-w50-0",
          "message": "이벤트 경쟁 그룹 등장: 에클라",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
        {
          "id": "noti-w50-1",
          "message": "투자사 조건 미달: 첫 투자 검토에서 최근 분기 영업 현금흐름 흑자 달성. 6주 안에 회복하지 못하면 투자사가 조치에 나섭니다.",
          "title": "주간 알림",
          "type": "warning",
          "week": 50,
        },
      ],
      "saveRevision": 0,
      "strategicExpansion": {
        "fandom": 0,
        "global": 0,
        "production": 0,
      },
      "trainingSchedule": {
        "focus": null,
        "intensity": "normal",
        "restDay": false,
      },
      "weeklyDecisions": [
        {
          "category": "투자사",
          "id": "emergency-investor",
          "lane": "crisis",
          "options": [
            {
              "activityOverride": "entertainment",
              "description": "상업 활동을 늘리고 투자사 지표를 우선합니다.",
              "effects": {
                "fandomDisappointment": 10,
                "money": 20000000,
                "satisfaction": -8,
                "stress": 10,
              },
              "id": "comply",
              "label": "요구 수용",
              "tradeoff": "이번 한 번만 긴급 예산을 받습니다. 대신 팬 신뢰와 멤버 상태가 크게 나빠집니다.",
            },
            {
              "description": "기한 연장과 평가 기준 완화를 요청합니다.",
              "effects": {
                "industry": -4,
                "money": -20000000,
                "satisfaction": 2,
              },
              "id": "negotiate",
              "label": "조건 재협상",
              "tradeoff": "유예 기간이 3주 늘어납니다. 자문 비용과 업계 마찰을 감수해야 합니다.",
            },
            {
              "description": "지원 축소를 감수하고 팀의 방향성을 지킵니다.",
              "effects": {
                "fandomLoyalty": 4,
                "industry": -6,
                "money": -30000000,
                "satisfaction": 6,
              },
              "id": "defy",
              "label": "자체 방침 고수",
              "tradeoff": "멤버와 팬은 안도합니다. 대신 자체 예산을 투입해야 하고 업계 관계가 크게 악화됩니다.",
            },
          ],
          "summary": "투자 조건 미달 또는 누적 압박으로 투자사가 운영 방침 변경을 요구하고 있습니다.",
          "title": "투자사 경영 개입",
          "trigger": {
            "description": "투자사 압박 활성",
            "entityIds": [],
            "kind": "investor",
            "severity": "critical",
          },
        },
      ],
      "weeklyFlow": {
        "activeEventIndex": 0,
        "eventQueueIds": [],
        "report": null,
        "resolutionId": null,
        "selectedDecisionIds": {},
        "selectedTargetTraineeIds": {},
        "state": "planning_ready",
      },
    },
    "staff": {
      "staff": [
        {
          "ability": 60.06,
          "id": "staff-manager",
          "name": "김매니저",
          "potentialCap": 70,
          "role": "manager",
          "salary": 42000000,
        },
      ],
    },
    "trainee": {
      "trainees": [
        {
          "age": 18,
          "chemistry": {
            "t2": 21.183673469387756,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "contract": {
            "nextRenegotiationWeek": 78,
            "tier": 1,
          },
          "currentActivity": "training",
          "id": "t1",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t1",
          "nationality": "korean",
          "popularity": 0,
          "position": "mainVocal",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 50.48,
            "dance": 50.48,
            "mental": 80,
            "stamina": 80.032,
            "visual": 50.48,
            "vocal": 50.768,
          },
          "stress": 11.8,
          "subPosition": null,
          "temperament": "steady",
          "traits": [
            "pure",
            "doglike",
          ],
        },
        {
          "age": 18,
          "chemistry": {
            "t1": 21.183673469387756,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "contract": {
            "nextRenegotiationWeek": 78,
            "tier": 1,
          },
          "currentActivity": "training",
          "id": "t2",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t2",
          "nationality": "korean",
          "popularity": 0,
          "position": "mainDancer",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 50.48,
            "dance": 50.48,
            "mental": 80,
            "stamina": 80.032,
            "visual": 50.48,
            "vocal": 50.768,
          },
          "stress": 11.8,
          "subPosition": null,
          "temperament": "steady",
          "traits": [
            "pure",
            "doglike",
          ],
        },
      ],
    },
  },
  "weekReport": {
    "awardResults": [
      {
        "showId": "mma",
        "showName": "MMA",
        "winners": [],
      },
      {
        "showId": "mama",
        "showName": "MAMA",
        "winners": [],
      },
      {
        "showId": "goldenDisk",
        "showName": "골든디스크",
        "winners": [],
      },
    ],
    "comebackSettlement": null,
    "competitorComebacks": [],
    "conflicts": [],
    "deltas": [
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y1-w50-0",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y1-w50-1",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 스트레스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w50-2",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 비주얼",
        },
      },
      {
        "after": 50.768,
        "before": 50,
        "day": 3,
        "id": "y1-w50-3",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 보컬",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w50-4",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 댄스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w50-5",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 매력",
        },
      },
      {
        "after": 80.032,
        "before": 80,
        "day": 3,
        "id": "y1-w50-6",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 체력",
        },
      },
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y1-w50-7",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y1-w50-8",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 스트레스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w50-9",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 비주얼",
        },
      },
      {
        "after": 50.768,
        "before": 50,
        "day": 3,
        "id": "y1-w50-10",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 보컬",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w50-11",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 댄스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w50-12",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 매력",
        },
      },
      {
        "after": 80.032,
        "before": 80,
        "day": 3,
        "id": "y1-w50-13",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 체력",
        },
      },
      {
        "after": 21.183673469387756,
        "before": 20,
        "day": 4,
        "id": "y1-w50-14",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t2",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 케미",
        },
      },
      {
        "after": 21.183673469387756,
        "before": 20,
        "day": 4,
        "id": "y1-w50-15",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t1",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 케미",
        },
      },
      {
        "after": 69,
        "before": 70,
        "day": 5,
        "id": "y1-w50-16",
        "severity": "info",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 만족도",
        },
      },
      {
        "after": 69,
        "before": 70,
        "day": 5,
        "id": "y1-w50-17",
        "severity": "info",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 만족도",
        },
      },
      {
        "after": 999053846,
        "before": 1000000000,
        "day": 6,
        "id": "y1-w50-18",
        "severity": "info",
        "source": {
          "id": "weekly-finance",
          "kind": "finance",
          "label": "주간 결산",
        },
        "target": {
          "field": "money",
          "id": null,
          "kind": "finance",
          "label": "자금",
        },
      },
      {
        "after": 8,
        "before": 10,
        "day": 6,
        "id": "y1-w50-19",
        "severity": "info",
        "source": {
          "id": "weekly-fandom",
          "kind": "fandom",
          "label": "주간 팬덤 변화",
        },
        "target": {
          "field": "public",
          "id": null,
          "kind": "fandom",
          "label": "대중 인지도",
        },
      },
      {
        "after": 1,
        "before": 2,
        "day": 6,
        "id": "y1-w50-20",
        "severity": "info",
        "source": {
          "id": "weekly-fandom",
          "kind": "fandom",
          "label": "주간 팬덤 변화",
        },
        "target": {
          "field": "global",
          "id": null,
          "kind": "fandom",
          "label": "해외 팬덤",
        },
      },
      {
        "after": 51,
        "before": 50,
        "day": 7,
        "id": "y1-w50-21",
        "severity": "info",
        "source": {
          "id": "advance-week",
          "kind": "calendar",
          "label": "주간 진행",
        },
        "target": {
          "field": "currentWeek",
          "id": null,
          "kind": "game",
          "label": "현재 주차",
        },
      },
    ],
    "events": [],
    "finance": {
      "expenses": {
        "fixedCosts": 946154,
      },
      "income": {},
    },
    "injuries": [],
    "news": [
      {
        "detail": "연말 무대 완성도와 업계 평판이 직접적인 변수로 작동한다.",
        "headline": "MMA/MAMA/골든디스크 시상식 일정 확정",
        "id": "news-w50-0",
        "type": "event",
        "week": 50,
      },
    ],
    "promotionResults": [],
    "season": "winter",
    "statChanges": [
      "트레이니-t1 컨디션: 80 → 79 (주간 훈련)",
      "트레이니-t1 스트레스: 10 → 12 (주간 훈련)",
      "트레이니-t1 보컬: 50 → 51 (주간 훈련)",
      "트레이니-t2 컨디션: 80 → 79 (주간 훈련)",
      "트레이니-t2 스트레스: 10 → 12 (주간 훈련)",
      "트레이니-t2 보컬: 50 → 51 (주간 훈련)",
      "트레이니-t1 만족도: 70 → 69 (멤버 만족도)",
      "트레이니-t2 만족도: 70 → 69 (멤버 만족도)",
    ],
    "warnings": [
      "이벤트 경쟁 그룹 등장: 에클라",
      "투자사 조건 미달: 첫 투자 검토에서 최근 분기 영업 현금흐름 흑자 달성. 6주 안에 회복하지 못하면 투자사가 조치에 나섭니다.",
    ],
    "week": 50,
  },
}
`;

exports[`processWeek 골든 스냅샷 > 일반 훈련 주간(5주차)의 출력이 스냅샷과 일치한다 1`] = `
{
  "newState": {
    "album": {
      "conceptHistory": [],
      "currentAlbum": null,
      "releasedAlbums": [],
    },
    "calendar": {
      "currentSeason": "spring",
      "kpopNews": [
        {
          "detail": "청량·Y2K 계열이 초봄 차트에서 강한 흐름을 보이고 있다.",
          "headline": "봄 시즌 청량 콘셉트 수요 급증",
          "id": "news-w5-0",
          "type": "trend",
          "week": 5,
        },
      ],
      "marketTrend": {
        "coldGenre": "trot",
        "coldMood": "retro",
        "hotGenre": "dancePop",
        "hotMood": "refreshing",
      },
      "seasonConceptBonus": {
        "cute": 50,
        "dark": 50,
        "dreamy": 50,
        "girlCrush": 50,
        "powerful": 50,
        "refreshing": 50,
        "retro": 50,
        "sexy": 50,
        "sophisticated": 50,
        "y2k": 50,
      },
      "upcomingCompetitorComebacks": [],
    },
    "competitor": {
      "backgroundGroups": [],
      "eventRivals": [],
      "permanentRivals": [],
    },
    "event": {
      "activeInterludeActivities": [],
      "pendingEvents": [],
    },
    "fandom": {
      "chartPositions": {
        "albumSales": 0,
        "melon": 0,
        "spotify": 0,
        "youtube": 0,
      },
      "fandom": 5,
      "fandomDisappointment": 0,
      "fandomLoyalty": 50,
      "global": 1,
      "industry": 20,
      "public": 8,
      "weeklyRevenue": {
        "ads": 0,
        "album": 0,
        "concert": 0,
        "goods": 0,
        "other": 0,
        "streaming": 0,
      },
    },
    "finance": {
      "expenseHistory": [
        {
          "breakdown": {
            "fixedCosts": 946154,
          },
          "week": 5,
        },
      ],
      "fixedCosts": {
        "dormitory": 1000000,
        "equipment": 300000,
        "healthcare": 0,
        "livingExpense": 500000,
        "security": 0,
        "staffSalary": 800000,
        "studio": 1500000,
      },
      "incomeHistory": [
        {
          "breakdown": {},
          "week": 5,
        },
      ],
      "money": 999053846,
      "upgrades": {
        "dormLevel": 1,
        "equipmentLevel": 1,
        "hasHealthcare": false,
        "hasSecurity": false,
        "livingExpenseLevel": 1,
        "studioLevel": 1,
      },
      "weeklyFixedTotal": 946154,
    },
    "game": {
      "activeProjects": [],
      "adContractsSigned": 0,
      "awardHistory": [],
      "campaignFailure": null,
      "campaignSeed": 0,
      "companyName": "픽스처 엔터테인먼트",
      "currentPhase": "training",
      "currentSeason": "spring",
      "currentWeek": 6,
      "currentYear": 1,
      "emergencyFinancing": [],
      "fiveYearReview": null,
      "groupGender": "female",
      "groupName": "FIXTURE",
      "insolvencyWeeks": 0,
      "investorComplianceCount": 0,
      "investorConditionProgress": {},
      "investorConditions": [
        {
          "deadlineWeeks": 36,
          "description": "첫 투자 검토에서 최근 분기 영업 현금흐름 흑자 달성",
          "id": "summit-quarterly",
          "metric": "quarterlyRevenue",
          "penalty": "경영 간섭이 시작되고 활동 우선순위가 왜곡된다.",
          "target": 0,
        },
        {
          "deadlineWeeks": 104,
          "description": "2년 안에 초기 투자금 회수 수준의 누적 성과 달성",
          "id": "summit-payback",
          "metric": "payback",
          "penalty": "지분 압박과 투자 회수 통보가 시작된다.",
          "target": 1500000000,
        },
      ],
      "investorPenaltyActive": false,
      "investorPressureWeeks": 0,
      "investorType": "vc",
      "lastInvestorDemandWeek": null,
      "lastOpportunityWeek": 6,
      "lastStrategicExpansionWeek": null,
      "milestonesAchieved": [],
      "notifications": [],
      "saveRevision": 0,
      "strategicExpansion": {
        "fandom": 0,
        "global": 0,
        "production": 0,
      },
      "trainingSchedule": {
        "focus": null,
        "intensity": "normal",
        "restDay": false,
      },
      "weeklyDecisions": [
        {
          "category": "예능 섭외",
          "expiresAtWeek": 6,
          "id": "opportunity:variety-offer:w6",
          "lane": "opportunity",
          "options": [
            {
              "activityOverride": "entertainment",
              "description": "준비보다 현장감을 살려 대중에게 얼굴을 알립니다.",
              "effects": {
                "condition": -4,
                "public": 5,
                "stress": 7,
              },
              "id": "accept-live-recording",
              "label": "바로 녹화에 들어간다",
              "tradeoff": "대중에게 얼굴을 알릴 기회지만, 이번 주 팀 훈련을 걸러야 하고 멤버들 피로가 눈에 띄게 쌓입니다.",
            },
            {
              "activityOverride": "individual",
              "description": "노출은 줄이고 일부 멤버만 촬영에 투입합니다.",
              "effects": {
                "chemistry": -2,
                "public": 3,
                "stress": 3,
              },
              "id": "send-variety-line",
              "label": "예능 담당만 보낸다",
              "targetSelection": {
                "label": "출연할 예능 담당",
                "max": 1,
                "min": 1,
              },
              "tradeoff": "노출 효과는 줄어드는 대신 부담이 적습니다. 다녀오는 멤버는 이번 주 팀 합동 연습에서 빠집니다.",
            },
          ],
          "summary": "제작진이 팀의 낯선 매력을 짧은 코너에서 시험해 보고 싶어 합니다.",
          "title": "신인 관찰 예능의 러브콜",
          "trigger": {
            "description": "방송 제작진의 이번 주 한정 출연 제안",
            "entityIds": [],
            "kind": "opportunity",
            "severity": "notice",
          },
        },
      ],
      "weeklyFlow": {
        "activeEventIndex": 0,
        "eventQueueIds": [],
        "report": null,
        "resolutionId": null,
        "selectedDecisionIds": {},
        "selectedTargetTraineeIds": {},
        "state": "planning_ready",
      },
    },
    "staff": {
      "staff": [
        {
          "ability": 60.06,
          "id": "staff-manager",
          "name": "김매니저",
          "potentialCap": 70,
          "role": "manager",
          "salary": 42000000,
        },
      ],
    },
    "trainee": {
      "trainees": [
        {
          "age": 18,
          "chemistry": {
            "t2": 21.183673469387756,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "contract": {
            "nextRenegotiationWeek": 78,
            "tier": 1,
          },
          "currentActivity": "training",
          "id": "t1",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t1",
          "nationality": "korean",
          "popularity": 0,
          "position": "mainVocal",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 50.48,
            "dance": 50.48,
            "mental": 80,
            "stamina": 80.032,
            "visual": 50.48,
            "vocal": 50.768,
          },
          "stress": 11.8,
          "subPosition": null,
          "temperament": "steady",
          "traits": [
            "pure",
            "doglike",
          ],
        },
        {
          "age": 18,
          "chemistry": {
            "t1": 21.183673469387756,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "contract": {
            "nextRenegotiationWeek": 78,
            "tier": 1,
          },
          "currentActivity": "training",
          "id": "t2",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t2",
          "nationality": "korean",
          "popularity": 0,
          "position": "mainDancer",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 50.48,
            "dance": 50.48,
            "mental": 80,
            "stamina": 80.032,
            "visual": 50.48,
            "vocal": 50.768,
          },
          "stress": 11.8,
          "subPosition": null,
          "temperament": "steady",
          "traits": [
            "pure",
            "doglike",
          ],
        },
      ],
    },
  },
  "weekReport": {
    "awardResults": null,
    "comebackSettlement": null,
    "competitorComebacks": [],
    "conflicts": [],
    "deltas": [
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y1-w5-0",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y1-w5-1",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 스트레스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w5-2",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 비주얼",
        },
      },
      {
        "after": 50.768,
        "before": 50,
        "day": 3,
        "id": "y1-w5-3",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 보컬",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w5-4",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 댄스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w5-5",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 매력",
        },
      },
      {
        "after": 80.032,
        "before": 80,
        "day": 3,
        "id": "y1-w5-6",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 체력",
        },
      },
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y1-w5-7",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y1-w5-8",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 스트레스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w5-9",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 비주얼",
        },
      },
      {
        "after": 50.768,
        "before": 50,
        "day": 3,
        "id": "y1-w5-10",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 보컬",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w5-11",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 댄스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w5-12",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 매력",
        },
      },
      {
        "after": 80.032,
        "before": 80,
        "day": 3,
        "id": "y1-w5-13",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 체력",
        },
      },
      {
        "after": 21.183673469387756,
        "before": 20,
        "day": 4,
        "id": "y1-w5-14",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t2",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 케미",
        },
      },
      {
        "after": 21.183673469387756,
        "before": 20,
        "day": 4,
        "id": "y1-w5-15",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t1",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 케미",
        },
      },
      {
        "after": 69,
        "before": 70,
        "day": 5,
        "id": "y1-w5-16",
        "severity": "info",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 만족도",
        },
      },
      {
        "after": 69,
        "before": 70,
        "day": 5,
        "id": "y1-w5-17",
        "severity": "info",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 만족도",
        },
      },
      {
        "after": 999053846,
        "before": 1000000000,
        "day": 6,
        "id": "y1-w5-18",
        "severity": "info",
        "source": {
          "id": "weekly-finance",
          "kind": "finance",
          "label": "주간 결산",
        },
        "target": {
          "field": "money",
          "id": null,
          "kind": "finance",
          "label": "자금",
        },
      },
      {
        "after": 8,
        "before": 10,
        "day": 6,
        "id": "y1-w5-19",
        "severity": "info",
        "source": {
          "id": "weekly-fandom",
          "kind": "fandom",
          "label": "주간 팬덤 변화",
        },
        "target": {
          "field": "public",
          "id": null,
          "kind": "fandom",
          "label": "대중 인지도",
        },
      },
      {
        "after": 1,
        "before": 2,
        "day": 6,
        "id": "y1-w5-20",
        "severity": "info",
        "source": {
          "id": "weekly-fandom",
          "kind": "fandom",
          "label": "주간 팬덤 변화",
        },
        "target": {
          "field": "global",
          "id": null,
          "kind": "fandom",
          "label": "해외 팬덤",
        },
      },
      {
        "after": 6,
        "before": 5,
        "day": 7,
        "id": "y1-w5-21",
        "severity": "info",
        "source": {
          "id": "advance-week",
          "kind": "calendar",
          "label": "주간 진행",
        },
        "target": {
          "field": "currentWeek",
          "id": null,
          "kind": "game",
          "label": "현재 주차",
        },
      },
    ],
    "events": [],
    "finance": {
      "expenses": {
        "fixedCosts": 946154,
      },
      "income": {},
    },
    "injuries": [],
    "news": [
      {
        "detail": "청량·Y2K 계열이 초봄 차트에서 강한 흐름을 보이고 있다.",
        "headline": "봄 시즌 청량 콘셉트 수요 급증",
        "id": "news-w5-0",
        "type": "trend",
        "week": 5,
      },
    ],
    "promotionResults": [],
    "season": "spring",
    "statChanges": [
      "트레이니-t1 컨디션: 80 → 79 (주간 훈련)",
      "트레이니-t1 스트레스: 10 → 12 (주간 훈련)",
      "트레이니-t1 보컬: 50 → 51 (주간 훈련)",
      "트레이니-t2 컨디션: 80 → 79 (주간 훈련)",
      "트레이니-t2 스트레스: 10 → 12 (주간 훈련)",
      "트레이니-t2 보컬: 50 → 51 (주간 훈련)",
      "트레이니-t1 만족도: 70 → 69 (멤버 만족도)",
      "트레이니-t2 만족도: 70 → 69 (멤버 만족도)",
    ],
    "warnings": [],
    "week": 5,
  },
}
`;

exports[`processWeek 골든 스냅샷 > 투자사 첫 평가 주간(VC 36주차)의 출력이 스냅샷과 일치한다 1`] = `
{
  "newState": {
    "album": {
      "conceptHistory": [],
      "currentAlbum": null,
      "releasedAlbums": [],
    },
    "calendar": {
      "currentSeason": "fall",
      "kpopNews": [
        {
          "detail": "팬 투표 비중이 높은 시상식일수록 코어 팬덤의 결속력이 중요하다.",
          "headline": "연말 시상식 투표 시작, 팬덤 총력전 돌입",
          "id": "news-w36-0",
          "type": "event",
          "week": 36,
        },
      ],
      "marketTrend": {
        "coldGenre": "trot",
        "coldMood": "retro",
        "hotGenre": "dancePop",
        "hotMood": "refreshing",
      },
      "seasonConceptBonus": {
        "cute": 50,
        "dark": 50,
        "dreamy": 50,
        "girlCrush": 50,
        "powerful": 50,
        "refreshing": 50,
        "retro": 50,
        "sexy": 50,
        "sophisticated": 50,
        "y2k": 50,
      },
      "upcomingCompetitorComebacks": [],
    },
    "competitor": {
      "backgroundGroups": [],
      "eventRivals": [],
      "permanentRivals": [],
    },
    "event": {
      "activeInterludeActivities": [],
      "pendingEvents": [],
    },
    "fandom": {
      "chartPositions": {
        "albumSales": 0,
        "melon": 0,
        "spotify": 0,
        "youtube": 0,
      },
      "fandom": 5,
      "fandomDisappointment": 0,
      "fandomLoyalty": 50,
      "global": 1,
      "industry": 20,
      "public": 8,
      "weeklyRevenue": {
        "ads": 0,
        "album": 0,
        "concert": 0,
        "goods": 0,
        "other": 0,
        "streaming": 0,
      },
    },
    "finance": {
      "expenseHistory": [
        {
          "breakdown": {
            "fixedCosts": 946154,
          },
          "week": 36,
        },
      ],
      "fixedCosts": {
        "dormitory": 1000000,
        "equipment": 300000,
        "healthcare": 0,
        "livingExpense": 500000,
        "security": 0,
        "staffSalary": 800000,
        "studio": 1500000,
      },
      "incomeHistory": [
        {
          "breakdown": {},
          "week": 36,
        },
      ],
      "money": 999053846,
      "upgrades": {
        "dormLevel": 1,
        "equipmentLevel": 1,
        "hasHealthcare": false,
        "hasSecurity": false,
        "livingExpenseLevel": 1,
        "studioLevel": 1,
      },
      "weeklyFixedTotal": 946154,
    },
    "game": {
      "activeProjects": [],
      "adContractsSigned": 0,
      "awardHistory": [],
      "campaignFailure": null,
      "campaignSeed": 0,
      "companyName": "픽스처 엔터테인먼트",
      "currentPhase": "training",
      "currentSeason": "fall",
      "currentWeek": 37,
      "currentYear": 1,
      "emergencyFinancing": [],
      "fiveYearReview": null,
      "groupGender": "female",
      "groupName": "FIXTURE",
      "insolvencyWeeks": 0,
      "investorComplianceCount": 0,
      "investorConditionProgress": {
        "summit-quarterly": {
          "firstFailedWeek": 36,
          "penaltyApplied": false,
        },
      },
      "investorConditions": [
        {
          "deadlineWeeks": 36,
          "description": "첫 투자 검토에서 최근 분기 영업 현금흐름 흑자 달성",
          "id": "summit-quarterly",
          "metric": "quarterlyRevenue",
          "penalty": "경영 간섭이 시작되고 활동 우선순위가 왜곡된다.",
          "target": 0,
        },
        {
          "deadlineWeeks": 104,
          "description": "2년 안에 초기 투자금 회수 수준의 누적 성과 달성",
          "id": "summit-payback",
          "metric": "payback",
          "penalty": "지분 압박과 투자 회수 통보가 시작된다.",
          "target": 1500000000,
        },
      ],
      "investorPenaltyActive": true,
      "investorPressureWeeks": 0,
      "investorType": "vc",
      "lastInvestorDemandWeek": 37,
      "lastOpportunityWeek": null,
      "lastStrategicExpansionWeek": null,
      "milestonesAchieved": [],
      "notifications": [
        {
          "id": "noti-w36-0",
          "message": "투자사 조건 미달: 첫 투자 검토에서 최근 분기 영업 현금흐름 흑자 달성. 6주 안에 회복하지 못하면 투자사가 조치에 나섭니다.",
          "title": "주간 알림",
          "type": "warning",
          "week": 36,
        },
      ],
      "saveRevision": 0,
      "strategicExpansion": {
        "fandom": 0,
        "global": 0,
        "production": 0,
      },
      "trainingSchedule": {
        "focus": null,
        "intensity": "normal",
        "restDay": false,
      },
      "weeklyDecisions": [
        {
          "category": "투자사",
          "id": "emergency-investor",
          "lane": "crisis",
          "options": [
            {
              "activityOverride": "entertainment",
              "description": "상업 활동을 늘리고 투자사 지표를 우선합니다.",
              "effects": {
                "fandomDisappointment": 10,
                "money": 20000000,
                "satisfaction": -8,
                "stress": 10,
              },
              "id": "comply",
              "label": "요구 수용",
              "tradeoff": "이번 한 번만 긴급 예산을 받습니다. 대신 팬 신뢰와 멤버 상태가 크게 나빠집니다.",
            },
            {
              "description": "기한 연장과 평가 기준 완화를 요청합니다.",
              "effects": {
                "industry": -4,
                "money": -20000000,
                "satisfaction": 2,
              },
              "id": "negotiate",
              "label": "조건 재협상",
              "tradeoff": "유예 기간이 3주 늘어납니다. 자문 비용과 업계 마찰을 감수해야 합니다.",
            },
            {
              "description": "지원 축소를 감수하고 팀의 방향성을 지킵니다.",
              "effects": {
                "fandomLoyalty": 4,
                "industry": -6,
                "money": -30000000,
                "satisfaction": 6,
              },
              "id": "defy",
              "label": "자체 방침 고수",
              "tradeoff": "멤버와 팬은 안도합니다. 대신 자체 예산을 투입해야 하고 업계 관계가 크게 악화됩니다.",
            },
          ],
          "summary": "투자 조건 미달 또는 누적 압박으로 투자사가 운영 방침 변경을 요구하고 있습니다.",
          "title": "투자사 경영 개입",
          "trigger": {
            "description": "투자사 압박 활성",
            "entityIds": [],
            "kind": "investor",
            "severity": "critical",
          },
        },
      ],
      "weeklyFlow": {
        "activeEventIndex": 0,
        "eventQueueIds": [],
        "report": null,
        "resolutionId": null,
        "selectedDecisionIds": {},
        "selectedTargetTraineeIds": {},
        "state": "planning_ready",
      },
    },
    "staff": {
      "staff": [
        {
          "ability": 60.06,
          "id": "staff-manager",
          "name": "김매니저",
          "potentialCap": 70,
          "role": "manager",
          "salary": 42000000,
        },
      ],
    },
    "trainee": {
      "trainees": [
        {
          "age": 18,
          "chemistry": {
            "t2": 21.183673469387756,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "contract": {
            "nextRenegotiationWeek": 78,
            "tier": 1,
          },
          "currentActivity": "training",
          "id": "t1",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t1",
          "nationality": "korean",
          "popularity": 0,
          "position": "mainVocal",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 50.48,
            "dance": 50.48,
            "mental": 80,
            "stamina": 80.032,
            "visual": 50.48,
            "vocal": 50.768,
          },
          "stress": 11.8,
          "subPosition": null,
          "temperament": "steady",
          "traits": [
            "pure",
            "doglike",
          ],
        },
        {
          "age": 18,
          "chemistry": {
            "t1": 21.183673469387756,
          },
          "conceptAffinity": {
            "cute": 50,
            "dark": 50,
            "dreamy": 50,
            "girlCrush": 50,
            "powerful": 50,
            "refreshing": 50,
            "retro": 50,
            "sexy": 50,
            "sophisticated": 50,
            "y2k": 50,
          },
          "condition": 79.46,
          "contract": {
            "nextRenegotiationWeek": 78,
            "tier": 1,
          },
          "currentActivity": "training",
          "id": "t2",
          "injuryWeeks": 0,
          "mood": 50,
          "name": "트레이니-t2",
          "nationality": "korean",
          "popularity": 0,
          "position": "mainDancer",
          "potential": 1.2,
          "satisfaction": 69,
          "stats": {
            "charm": 50.48,
            "dance": 50.48,
            "mental": 80,
            "stamina": 80.032,
            "visual": 50.48,
            "vocal": 50.768,
          },
          "stress": 11.8,
          "subPosition": null,
          "temperament": "steady",
          "traits": [
            "pure",
            "doglike",
          ],
        },
      ],
    },
  },
  "weekReport": {
    "awardResults": null,
    "comebackSettlement": null,
    "competitorComebacks": [],
    "conflicts": [],
    "deltas": [
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y1-w36-0",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y1-w36-1",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 스트레스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w36-2",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 비주얼",
        },
      },
      {
        "after": 50.768,
        "before": 50,
        "day": 3,
        "id": "y1-w36-3",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 보컬",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w36-4",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 댄스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w36-5",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 매력",
        },
      },
      {
        "after": 80.032,
        "before": 80,
        "day": 3,
        "id": "y1-w36-6",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 체력",
        },
      },
      {
        "after": 79.46,
        "before": 80,
        "day": 3,
        "id": "y1-w36-7",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "condition",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 컨디션",
        },
      },
      {
        "after": 11.8,
        "before": 10,
        "day": 3,
        "id": "y1-w36-8",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stress",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 스트레스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w36-9",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.visual",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 비주얼",
        },
      },
      {
        "after": 50.768,
        "before": 50,
        "day": 3,
        "id": "y1-w36-10",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.vocal",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 보컬",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w36-11",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.dance",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 댄스",
        },
      },
      {
        "after": 50.48,
        "before": 50,
        "day": 3,
        "id": "y1-w36-12",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.charm",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 매력",
        },
      },
      {
        "after": 80.032,
        "before": 80,
        "day": 3,
        "id": "y1-w36-13",
        "severity": "info",
        "source": {
          "id": "weekly-training",
          "kind": "training",
          "label": "주간 훈련",
        },
        "target": {
          "field": "stats.stamina",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 체력",
        },
      },
      {
        "after": 21.183673469387756,
        "before": 20,
        "day": 4,
        "id": "y1-w36-14",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t2",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 케미",
        },
      },
      {
        "after": 21.183673469387756,
        "before": 20,
        "day": 4,
        "id": "y1-w36-15",
        "severity": "info",
        "source": {
          "id": "weekly-chemistry",
          "kind": "chemistry",
          "label": "팀 케미",
        },
        "target": {
          "field": "chemistry.t1",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 케미",
        },
      },
      {
        "after": 69,
        "before": 70,
        "day": 5,
        "id": "y1-w36-16",
        "severity": "info",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t1",
          "kind": "trainee",
          "label": "트레이니-t1 만족도",
        },
      },
      {
        "after": 69,
        "before": 70,
        "day": 5,
        "id": "y1-w36-17",
        "severity": "info",
        "source": {
          "id": "weekly-satisfaction",
          "kind": "satisfaction",
          "label": "멤버 만족도",
        },
        "target": {
          "field": "satisfaction",
          "id": "t2",
          "kind": "trainee",
          "label": "트레이니-t2 만족도",
        },
      },
      {
        "after": 999053846,
        "before": 1000000000,
        "day": 6,
        "id": "y1-w36-18",
        "severity": "info",
        "source": {
          "id": "weekly-finance",
          "kind": "finance",
          "label": "주간 결산",
        },
        "target": {
          "field": "money",
          "id": null,
          "kind": "finance",
          "label": "자금",
        },
      },
      {
        "after": 8,
        "before": 10,
        "day": 6,
        "id": "y1-w36-19",
        "severity": "info",
        "source": {
          "id": "weekly-fandom",
          "kind": "fandom",
          "label": "주간 팬덤 변화",
        },
        "target": {
          "field": "public",
          "id": null,
          "kind": "fandom",
          "label": "대중 인지도",
        },
      },
      {
        "after": 1,
        "before": 2,
        "day": 6,
        "id": "y1-w36-20",
        "severity": "info",
        "source": {
          "id": "weekly-fandom",
          "kind": "fandom",
          "label": "주간 팬덤 변화",
        },
        "target": {
          "field": "global",
          "id": null,
          "kind": "fandom",
          "label": "해외 팬덤",
        },
      },
      {
        "after": 37,
        "before": 36,
        "day": 7,
        "id": "y1-w36-21",
        "severity": "info",
        "source": {
          "id": "advance-week",
          "kind": "calendar",
          "label": "주간 진행",
        },
        "target": {
          "field": "currentWeek",
          "id": null,
          "kind": "game",
          "label": "현재 주차",
        },
      },
    ],
    "events": [],
    "finance": {
      "expenses": {
        "fixedCosts": 946154,
      },
      "income": {},
    },
    "injuries": [],
    "news": [
      {
        "detail": "팬 투표 비중이 높은 시상식일수록 코어 팬덤의 결속력이 중요하다.",
        "headline": "연말 시상식 투표 시작, 팬덤 총력전 돌입",
        "id": "news-w36-0",
        "type": "event",
        "week": 36,
      },
    ],
    "promotionResults": [],
    "season": "fall",
    "statChanges": [
      "트레이니-t1 컨디션: 80 → 79 (주간 훈련)",
      "트레이니-t1 스트레스: 10 → 12 (주간 훈련)",
      "트레이니-t1 보컬: 50 → 51 (주간 훈련)",
      "트레이니-t2 컨디션: 80 → 79 (주간 훈련)",
      "트레이니-t2 스트레스: 10 → 12 (주간 훈련)",
      "트레이니-t2 보컬: 50 → 51 (주간 훈련)",
      "트레이니-t1 만족도: 70 → 69 (멤버 만족도)",
      "트레이니-t2 만족도: 70 → 69 (멤버 만족도)",
    ],
    "warnings": [
      "투자사 조건 미달: 첫 투자 검토에서 최근 분기 영업 현금흐름 흑자 달성. 6주 안에 회복하지 못하면 투자사가 조치에 나섭니다.",
    ],
    "week": 36,
  },
}
`;
